--- a/mini_projets/electronique_lineaire_15A/rapport.tex
+++ b/mini_projets/electronique_lineaire_15A/rapport.tex
@@ -774,26 +774,28 @@
 
  \chapter{Bilan}
   \section{Respect du cahier des charges}
-     \begin{tabular}{|l|l|c|c|c|c|c|c|}
+    \begin{tabular}{|l|l|c|c|c|c|c|}
      \hline
-     & & Typique & Tolérance & Minimum & Maximum & Unités & Obtenu \\
+     & & Typique & Tolérance & Minimum & Maximum  & Obtenu\\
      \hline
-     \multirow{4}{3cm}{Caractéristiques générales à 30k\hertz} & Gain en tension & 60 & $\pm$ 5dB & 55 & 65 & dB & 57.95\\
-     \cline{2-8} & Résistance d'entrée & 30 & $\pm$ 15 \% & 25.5 & 34.5 & \kilo\ohm & 29.658\\
-     \cline{2-8} & Résistance de sortie & 100 & $\pm$ 15 \% & 85 & 115 & \ohm & 113\\
-     \cline{2-8} & Dynamique de sortie & & & 6 & & V càc & 5.98\\
+     \multirow{4}{3cm}{Caractéristiques générales à 30k\hertz} & Gain en tension & 60 & $\pm$ 5dB & 55 & 65 & \\
+     \cline{2-7} & Résistance d'entrée & 30 & $\pm$ 15 \% & 25.5 & 34.5 & \\
+     \cline{2-7} & Résistance de sortie & 100 & $\pm$ 15 \% & 85 & 115 & \\
+     \cline{2-7} & Dynamique de sortie (5\kilo\ohm)& & & 6 & & \\
+     \cline{2-7} & Dynamique de sortie (100\ohm)& & & 0.1 & & \\
      \hline
-     \multirow{2}{3cm}{Fréquence de coupure} & basse & 100 & $\pm$ 20 \% & 80 & 120 & \hertz & 101 \hertz \\
-     \cline{2-8} & haute & & & 500 & & k\hertz & 504 \\
+     \multirow{2}{3cm}{Fréquence de coupure} & basse & 100 & $\pm$ 20 \% & 80 & 120 &\\
+     \cline{2-7} & haute & & & 500 & & \\
      \hline
-     Distorsion harmonique & [1k\hertz;100k\hertz] & & & & 1,00 & \% & 6.67 \\
+     Distorsion harmonique & [1k\hertz;100k\hertz] & & & & 5,00 \% & \\
      \hline
-     \multirow{2}*{Tension d'alimentation} & Positive & 12V & & 0 & 12 & V & 12\\
-     \cline{2-8} & Négative & -12V & & -12 & 0 & V & -12\\
+     \multirow{2}*{Tension d'alimentation} & Positive & 12V & & 0 & 12 & \\
+     \cline{2-7} & Négative & -12V & & -12 & 0 & \\
      \hline
-     Courant de collecteur & & & & 0.1 & 10 & mA & OK\\
+     Courant de collecteur & & & & 0.1 & 10 & \\
      \hline
     \end{tabular}
+
 
  
 
